fixed overflow

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 .wrapper {
   width: 100%;
   height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
   position: relative;
 }
 
